compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_12.diag.txt
/kt45461_12.kt:12:19: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: String, K (multiple incompatible classes: String, Number)
    Bar<String>().takeFoo(foo) // error in 1.3.72, no error in 1.4.31
                  ^

